# CineMA

./: .codespell-ignore.txt  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pre-commit.yml  pytest.yml
cinema/: __init__.py  conv.py  conv_test.py  convvit.py  convvit_test.py  device.py  eval.py  log.py  metric.py  metric_test.py  optim.py  resnet.py  resnet_test.py  rotary.py  rotary_test.py  train.py  transform.py  transform_test.py  vit.py  vit_test.py
cinema/classification/: __init__.py  dataset.py  eval.py  train.py  train_test.py
cinema/classification/acdc/: README.md  __init__.py  config.yaml  eval.py  train.py  train_eval_test.py
cinema/classification/mnms/: README.md  __init__.py  config.yaml  eval.py  train.py  train_eval_test.py
cinema/classification/mnms2/: README.md  config.yaml  eval.py  train.py  train_eval_test.py
cinema/data/: __init__.py  dicom.py  sitk.py  sitk_test.py
cinema/data/acdc/: README.md  __init__.py  preprocess.py
cinema/data/emidec/: README.md  __init__.py  preprocess.py
cinema/data/kaggle/: README.md  __init__.py  preprocess.py
cinema/data/landmark/: README.md  __init__.py  preprocess.py
cinema/data/mnms/: README.md  __init__.py  preprocess.py
cinema/data/mnms2/: README.md  __init__.py  preprocess.py
cinema/data/myops2020/: README.md  __init__.py  preprocess.py
cinema/data/rescan/: README.md  __init__.py  preprocess.py
cinema/examples/: cine_cmr.py  dicom_to_nifti.py  test_scripts.py
cinema/examples/inference/: __init__.py  classification_cvd.py  classification_sex.py  classification_vendor.py  landmark_coordinate.py  landmark_heatmap.py  mae.py  mae_feature_extraction.py  regression_age.py  regression_bmi.py  regression_ef.py  segmentation_lax_4c.py  segmentation_sax.py  test_scripts.py
cinema/examples/train/: __init__.py  classification.yaml  pretrain.py  pretrain.yaml  segmentation.py  segmentation.yaml  test_scripts.py
cinema/mae/: README.md  __init__.py  config.yaml  mae.py  mae_test.py  pretrain.py  pretrain_test.py
cinema/regression/: __init__.py  dataset.py  eval.py  train.py
cinema/regression/acdc/: README.md  __init__.py  config.yaml  eval.py  train.py  train_eval_test.py
cinema/regression/landmark/: README.md  __init__.py  config.yaml  dataset.py  eval.py  train.py  train_eval_test.py
cinema/regression/mnms/: README.md  config.yaml  eval.py  train.py  train_eval_test.py
cinema/regression/mnms2/: README.md  __init__.py  config.yaml  eval.py  train.py  train_eval_test.py
cinema/segmentation/: __init__.py  convunetr.py  convunetr_test.py  dataset.py  eval.py  train.py  train_test.py  unet.py  unet_test.py
cinema/segmentation/acdc/: README.md  __init__.py  config.yaml  eval.py  train.py  train_eval_test.py
cinema/segmentation/emidec/: README.md  __init__.py  config.yaml  eval.py  train.py  train_eval_test.py
cinema/segmentation/kaggle/: README.md  __init__.py  dataset.py  eval.py  train_eval_test.py
cinema/segmentation/landmark/: README.md  __init__.py  config.yaml  dataset.py  eval.py  train.py  train_eval_test.py
cinema/segmentation/mnms/: README.md  __init__.py  config.yaml  eval.py  train.py  train_eval_test.py
cinema/segmentation/mnms2/: README.md  __init__.py  config.yaml  eval.py  train.py  train_eval_test.py
cinema/segmentation/myops2020/: README.md  __init__.py  config.yaml  eval.py  train.py  train_eval_test.py
cinema/segmentation/rescan/: README.md  __init__.py  config.yaml  dataset.py  ef_eval.py  eval.py  train.py  train_eval_test.py
envs/: environment.yml  requirements.txt
examples/: cine_cmr.py  dicom_to_nifti.py  test_scripts.py
examples/inference/: classification_cvd.py  classification_sex.py  classification_vendor.py  landmark_coordinate.py  landmark_heatmap.py  mae.py  mae_feature_extraction.py  regression_age.py  regression_bmi.py  regression_ef.py  segmentation_lax_4c.py  segmentation_sax.py  test.py  test_scripts.py
examples/train/: classification.py  pretrain.py  regression.py  regression.yaml  segmentation.py  test_scripts.py
